# spotipy-podcasts

./: .gitignore  Makefile  README.md  pyproject.toml
src/: main.py  rss.py  show.py
