[tool.poetry]
name = "spotipy-podcasts"
version = "0.1.0"
description = ""
authors = ["vvveracruz <me@vgg.cz>"]

[tool.poetry.dependencies]
python = ">=3.6.0,<4.0"

[tool.poetry.dev-dependencies]
black = {version="^22.1.0", python=">=3.6.2,<4.0"}
ipython = {version="^8.1.1", python=">=3.8,<4.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
